--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     --adresscolor: rgba(255, 255, 255, 0.6);
     --buttoncolor: #F5F4FA;
     --bgcolorfooter: #2F303A;
+    --activebutton: #188CE8;
 }
 
 .list {
@@ -17,9 +18,8 @@
     text-decoration: none;
 }
 body {
-    font-family:'Roboto', serif;
+    font-family:'Roboto', sans-serif;
     color: var(--maincolor);
-    font-style: normal;
 }
 
 
@@ -48,6 +48,9 @@ body {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+}
+.header_item_l{
+    color: var(--blackcolor);
 }
 .header_nav_l_link{
     color: var(--graycolor);
@@ -81,8 +84,7 @@ body {
 }
 /* Buttons */
 
-.progect_list_b,
-.progect_list_bi{
+.progect_list_b{
     color: var(--blackcolor) ; 
     background-color: var(--buttoncolor);
     cursor: pointer;
@@ -93,20 +95,45 @@ body {
     letter-spacing: 0.03em;
     border-radius: 4px;
     border: none;
-    font-family: 'Roboto';
+    font-family: inherit;
     }
 
      
 .progect_list_b:hover,
 .progect_list_b:focus,
-.progect_list_bi:hover,
-.progect_list_bi:focus,
 .active-button {
     color: var(--whitecolor);
     background-color: var(--bluecolor);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
             0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+.progect_list_bi {
+    color: var(--whitecolor);
+    background-color: var(--bluecolor);
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    display: flex;
+    text-align: center;
+    letter-spacing: 0.06em;
+    border-radius: 4px;
+    border: none;
+    font-family: inherit;
+    margin: 0 auto;
+    display: block;
+}
+
+
+.progect_list_bi:hover,
+.progect_list_bi:focus,
+.active-button {
+    color: var(--whitecolor);
+    background-color: var(--activebutton);
+    box-shadow: box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+}
+
 
 /* Images */
 .img_h2{
@@ -168,12 +195,7 @@ h1 {
 .section_h1{
     background-color:var(--bgcolorfooter);
 }
-.progect_list_bi{
-    margin: 0 auto;
-    display: block;
-}
 .name_benef{
-     color: var(--maincolor);
         font-weight: 700;
         font-size: 14px;
         line-height: 1.14;
@@ -189,7 +211,6 @@ h1 {
 } 
 .Whatwedo,
 .Ourteam{
-    color: var(--maincolor);
 font-weight: 700;
     font-size: 36px;
     line-height: 1.2;
@@ -197,7 +218,6 @@ font-weight: 700;
     letter-spacing: 0.03em;
 }
 .Ourteam_h3{
-    color: var(--maincolor);
     font-weight: 500;
         font-size: 16px;
         line-height: 1.2;
@@ -205,6 +225,7 @@ font-weight: 700;
         letter-spacing: 0.03em;
 }
 .Ourteam_p{
+    color: var(--graycolor);
     font-weight: 400;
         font-size: 16px;
         line-height: 1.2;
